--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1,2 +1,131 @@
-h1 
-    color: red
+@import 'variables'
+@import 'utilities'
+
+
+@include reset
+
+
+@font-face 
+     font-family: "Lato"
+     src: local(fonts), url(../fonts/Lato-Black.ttf)
+     font-height: 900
+
+@font-face 
+     font-family: "Lato"
+     src: local(fonts), url(../fonts/Lato-light.ttf)
+     font-height: 300   
+
+@font-face 
+     font-family: "Lato"
+     src: local(fonts), url(../fonts/Lato-lightItalic.ttf)
+     font-height: 300    
+
+@font-face 
+     font-family: "Lato"
+     src: local(fonts), url(../fonts/Lato-bold.ttf)
+     font-height: 700       
+@font-face 
+     font-family: "Lato"
+     src: local(fonts), url(../fonts/Lato-boldItalic.ttf)
+     font-height: 700        
+
+                   
+
+
+#main-banner
+    background: linear-gradient(rgba(0, 0, 0, .6), rgba(0,0,0,.6)), url('../img/office.jpeg')
+    height: 85vh
+    background-size: cover   
+    background-position: center  
+
+    .nav-container
+        display: flex
+        justify-content: space-between
+        position: fixed
+        top: 0
+        left: 0
+        width: 100%
+        padding: 1.5rem 2rem
+        background-color: $black 
+        z-index: 10
+
+        .brand
+            color: $light-color 
+            font-size: 2rem
+            @include main-hover
+
+        &-navbar
+            display: flex
+            align-items: center
+            height: 100%
+
+            li
+                margin: 5px 10px    
+
+                a
+                    color: $light-color
+                    @include main-hover
+
+        .fas.fa-bars
+            font-size: 2rem
+            color: $light-color
+            display: none
+    
+    .title-container   
+        color: $light-color
+        display: flex
+        flex-direction: column
+        align-items: center 
+        justify-content: center    
+        height: 100%
+
+        h2
+            font-size: 3rem
+            @extend %title-text-shadow
+
+        h1
+            font-size: 4rem
+            margin-top: 1rem
+            @extend %title-text-shadow
+
+.services-container
+    text-align: center
+    padding: 2rem
+    margin-bottom: 2rem
+
+    h2
+        @extend %section-title
+
+    .services-card-container
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-around 
+        padding: 2rem   
+
+        .services-card
+            width: 30%
+            margin: 1%
+            padding: 2rem
+            border: 1px solid #CCC
+            transition: .3s
+            border-radius: 6px
+            cursor: pointer
+
+            i 
+                color: $primary-color
+                font-size: 4rem
+                display: block
+                margin-top: 1rem
+                margin-bottom: 1.5rem 
+
+            h3
+                font-size: 1.5rem
+                margin-bottom: 1rem
+
+            p
+                color: $text-color       
+
+            &:hover
+                border: transparent
+                box-shadow: 0 1px 10px #CCC         
+
