--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1,5 +1,6 @@
 @import 'variables'
 @import 'utilities'
+@import 'button'
 
 
 @include reset
@@ -129,3 +130,25 @@
                 border: transparent
                 box-shadow: 0 1px 10px #CCC         
 
+.btn
+    padding: .6rem 1rem 
+    border: 1px solid $light-color 
+    text-transform: uppercase
+    border-radius: 5px
+    transition: .3s
+    color: $light-color
+
+    &:hover
+        border-color: $primary-color
+        color: $primary-color
+    
+    &-primary
+        background-color: $primary-color
+        border-color: $primary-color
+        &:hover
+            background-color: transparent
+
+    &-rounded
+        margin-top: 1rem
+        border-radius: 2rem
+        padding: 1rem 1.5rem        
