--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,48 @@
+.btn {
+  padding: 0.6rem 1rem;
+  border: 1px solid #FFF;
+  text-transform: uppercase;
+  border-radius: 5px;
+  transition: 0.3s;
+  color: #FFF;
+}
+.btn:hover {
+  border-color: #FF5200;
+  color: #FF5200;
+}
+.btn-primary {
+  background-color: #FF5200;
+  border-color: #FF5200;
+}
+.btn-primary:hover {
+  background-color: transparent;
+}
+.btn-rounded {
+  margin-top: 1rem;
+  border-radius: 2rem;
+  padding: 1rem 1.5rem;
+}
+
 #main-banner .title-container h1, #main-banner .title-container h2 {
   text-shadow: 3px 2px #000;
 }
 
-.services-container h2 {
+.jobs-container h2, .services-container h2 {
   font-size: 3rem;
   margin-top: 2rem;
   text-align: center;
+}
+
+.jobs-container .jobs-list .other-jobs-container .job-card, .jobs-container .jobs-list .firts-job {
+  background-size: cover;
+  background-position: center;
+}
+
+.jobs-container .jobs-list .other-jobs-container .job-card .job-card-title, .jobs-container .jobs-list .firts-job .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-cover, .jobs-container .jobs-list .firts-job .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card .job-card-description, .jobs-container .jobs-list .firts-job .job-card-description {
+  opacity: 0;
+}
+.jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-title, .jobs-container .jobs-list .firts-job:hover .job-card-title, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-cover, .jobs-container .jobs-list .firts-job:hover .job-card-cover, .jobs-container .jobs-list .other-jobs-container .job-card:hover .job-card-description, .jobs-container .jobs-list .firts-job:hover .job-card-description {
+  opacity: 1;
 }
 
 * {
@@ -148,29 +185,73 @@ li {
   box-shadow: 0 1px 10px #CCC;
 }
 
-.btn {
-  padding: 0.6rem 1rem;
-  border: 1px solid #FFF;
-  text-transform: uppercase;
-  border-radius: 5px;
-  transition: 0.3s;
+.jobs-container {
+  background-color: #E5EAFF;
+  padding: 3rem;
+}
+.jobs-container .jobs-list {
+  display: flex;
+  padding: 2rem 0;
+}
+.jobs-container .jobs-list .firts-job {
+  width: 30%;
+  height: 415px;
+  margin: 0 2%;
+  background-image: url("../img/job1.jpeg");
+  position: relative;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.jobs-container .jobs-list .other-jobs-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 68%;
+}
+.jobs-container .jobs-list .other-jobs-container .job-card {
+  width: 46%;
+  height: 200px;
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 15px;
+  margin-right: 15px;
+}
+.jobs-container .jobs-list .other-jobs-container #job1 {
+  background-image: url("../img/job1.jpeg");
+}
+.jobs-container .jobs-list .other-jobs-container #job2 {
+  background-image: url("../img/job2.jpeg");
+}
+.jobs-container .jobs-list .other-jobs-container #job3 {
+  background-image: url("../img/job3.jpeg");
+}
+.jobs-container .jobs-list .other-jobs-container #job4 {
+  background-image: url("../img/job4.jpeg");
+}
+.jobs-container .jobs-list .other-jobs-container #job5 {
+  background-image: url("../img/job5.jpeg");
+}
+.jobs-container .jobs-list .job-card-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 1.75rem;
+  background-color: rgba(0, 0, 0, 0.6);
+  border: 3px solid #FF5200;
+}
+.jobs-container .jobs-list .job-card-title {
+  text-align: center;
+  color: #fff;
+  font-size: 2.2rem;
+  transition: 0.5s;
+  font-weight: bold;
+}
+.jobs-container .jobs-list .job-card-description {
+  text-align: center;
   color: #FFF;
-}
-.btn:hover {
-  border-color: #FF5200;
-  color: #FF5200;
-}
-.btn-primary {
-  background-color: #FF5200;
-  border-color: #FF5200;
-}
-.btn-primary:hover {
-  background-color: transparent;
-}
-.btn-rounded {
-  margin-top: 1rem;
-  border-radius: 2rem;
-  padding: 1rem 1.5rem;
+  padding: 1rem;
+  font-size: 0.9rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
