--- a/css/styles.css
+++ b/css/styles.css
@@ -239,6 +239,7 @@ li {
   padding-top: 1.75rem;
   background-color: rgba(0, 0, 0, 0.6);
   border: 3px solid #FF5200;
+  transition: 0.5s;
 }
 .jobs-container .jobs-list .job-card-title {
   text-align: center;
@@ -252,6 +253,53 @@ li {
   color: #FFF;
   padding: 1rem;
   font-size: 0.9rem;
+}
+
+footer {
+  background-color: #1D1D1D;
+  color: #8B8E94;
+  padding: 5rem 2rem;
+}
+footer .footer-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+footer .footer-container .footer-title {
+  color: #FFF !important;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+footer .footer-desc-container, footer .footer-links-container {
+  width: 50%;
+}
+footer .footer-desc-container .footer-desc-container p, footer .footer-links-container .footer-desc-container p {
+  width: 80%;
+  line-height: 1.3;
+}
+footer .footer-links-container {
+  display: flex;
+}
+footer .footer-links-container-list {
+  padding: 0 1rem;
+}
+footer .footer-links-container li {
+  margin-bottom: 0.5rem;
+}
+footer .footer-links-container li a {
+  color: #8B8E94;
+  transition: 0.5s;
+}
+footer .footer-links-container li a:hover {
+  color: #FFF;
+}
+footer .footer-copy-right-container {
+  width: 100%;
+  margin-top: 3rem;
+}
+footer .footer-copy-right-container p {
+  margin-bottom: 1rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
