--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -192,6 +192,8 @@
             padding-top: 1.75rem
             background-color: rgba(0, 0, 0, .6)
             border: 3px solid $primary-color
+            transition: .5s
+
 
         .job-card-title
             text-align: center
@@ -205,3 +207,51 @@
             color: #FFF  
             padding: 1rem
             font-size: .9rem
+
+
+footer
+    background-color: $footer-bg     
+    color: $text-color
+    padding: 5rem 2rem  
+
+    .footer-container
+        max-width: 1200px
+        margin: 0 auto
+        display: flex
+        flex-wrap: wrap  
+
+        .footer-title
+            color: $light-color !important    
+            font-weight: bold
+            margin-bottom: 1rem 
+
+    .footer-desc-container, .footer-links-container
+        width: 50%
+
+        .footer-desc-container
+            p
+                width: 80%
+                line-height: 1.3   
+
+    .footer-links-container
+        display: flex            
+
+        &-list
+            padding: 0 1rem
+
+        li
+            margin-bottom: .5rem    
+
+            a
+                color: $text-color
+                transition: .5s
+
+                &:hover
+                    color: #FFF
+
+    .footer-copy-right-container
+        width: 100%
+        margin-top: 3rem
+
+        p
+         margin-bottom: 1rem                 
