--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -24,6 +24,7 @@
      font-family: "Lato"
      src: local(fonts), url(../fonts/Lato-bold.ttf)
      font-height: 700       
+
 @font-face 
      font-family: "Lato"
      src: local(fonts), url(../fonts/Lato-boldItalic.ttf)
@@ -36,7 +37,14 @@
     background: linear-gradient(rgba(0, 0, 0, .6), rgba(0,0,0,.6)), url('../img/office.jpeg')
     height: 85vh
     background-size: cover   
-    background-position: center  
+    background-position: center
+
+    @include mobile
+        height: 100vh  
+
+    nav
+        @include mobile
+          display: none
 
     .nav-container
         display: flex
@@ -48,6 +56,9 @@
         padding: 1.5rem 2rem
         background-color: $black 
         z-index: 10
+
+        @include mobile
+            padding: 1rem
 
         .brand
             color: $light-color 
@@ -70,7 +81,10 @@
             font-size: 2rem
             color: $light-color
             display: none
-    
+
+        @include mobile
+            display: block
+
     .title-container   
         color: $light-color
         display: flex
@@ -78,6 +92,10 @@
         align-items: center 
         justify-content: center    
         height: 100%
+
+        @include mobile
+            text-align: center
+            padding: 2rem
 
         h2
             font-size: 3rem
@@ -102,6 +120,9 @@
         justify-content: space-around 
         padding: 2rem   
 
+        @include mobile
+            padding: 2rem 0
+
         .services-card
             width: 30%
             margin: 1%
@@ -110,6 +131,10 @@
             transition: .3s
             border-radius: 6px
             cursor: pointer
+
+            @include mobile
+                width: 100%
+                margin-bottom: 2rem
 
             i 
                 color: $primary-color
@@ -134,12 +159,18 @@
     background-color: $secondary-bg
     padding: 3rem
 
+    @include mobile
+        padding: 2rem
+
     h2
         @extend %section-title      
 
     .jobs-list
         display: flex
-        padding: 2rem 0      
+        padding: 2rem 0     
+
+        @include mobile
+            flex-direction: column 
 
         .firts-job
             width: 30%
@@ -152,10 +183,17 @@
             @extend %center-bg
             @extend %card-hover
 
+            @include mobile
+                @include card-mobile 
+
         .other-jobs-container
             display: flex  
             flex-wrap: wrap
             width: 68%
+
+            @include mobile
+                width: 100%
+                flex-direction: column  
 
             .job-card
                 width: 46%
@@ -166,6 +204,9 @@
                 margin-right: 15px
                 @extend %center-bg
                 @extend %card-hover  
+
+                @include mobile
+                    @include card-mobile 
 
             #job1
                 background-image: url('../img/job1.jpeg')  
@@ -220,6 +261,10 @@ footer
         display: flex
         flex-wrap: wrap  
 
+        @include mobile
+            max-width: 100%
+            flex-direction: column
+
         .footer-title
             color: $light-color !important    
             font-weight: bold
@@ -228,16 +273,31 @@ footer
     .footer-desc-container, .footer-links-container
         width: 50%
 
+        @include mobile
+            width: 100%
+            margin-bottom: 2rem
+            text-align: center
+
         .footer-desc-container
             p
                 width: 80%
                 line-height: 1.3   
 
+                @include mobile
+                    width: 100%
+            
+
     .footer-links-container
-        display: flex            
+        display: flex    
+
+        @include mobile
+            flex-direction: column        
 
         &-list
             padding: 0 1rem
+
+            @include mobile
+                margin-bottom: 2rem
 
         li
             margin-bottom: .5rem    
@@ -253,5 +313,8 @@ footer
         width: 100%
         margin-top: 3rem
 
+        @include mobile
+            text-align: center
+
         p
-         margin-bottom: 1rem                 
+         margin-bottom: 1rem                  
